--- a/data/highlighting.in
+++ b/data/highlighting.in
@@ -163,7 +163,7 @@ php:<html> Tags:1:1::3:^Tags$:#000066::2:0:
 php:HTML Attributes:1:([a-z]*=)[ \\n\\t]*("[^"]*")::2:^Tags$:#660099::0:0:
 php:HTML Attribute Contents:1:2::3:^HTML Attributes$:#cc0000::0:0:
 php:HTML DocType:1:<![a-z0-9]+:[^?-]>:1::#bb8800::1:1:
-php:HTML Entities:1:&[^;= ]*;::2::#999999::2:0:
+php:HTML Entities:1:&[^; ]*;::2::#999999::2:0:
 php:Comment:0:<!--:-->:1::#aaaaaa::1:2:
 php:PHP Block:1:<\\?(php)\\s*([\\w_]*.*?)\\s*\\?>::2:^top|HTML Attribute Contents$:#0000ee::2:0:
 php:PHP Block Tags:1:1::3:^PHP Block$:#990099::2:0:
@@ -175,12 +175,14 @@ php:String (double quoted):0:":":1:^PHP Block Content$:#009900::1:1:
 php:String (double quote escaped):0:\\\\.::2:^String \\(double quoted\\)$:::1:1:
 php:Variables:1:\\$[a-z_][a-z0-9>_$-]*::2:^PHP Block Content$:#cc0000::2:0:
 php:Variables (special characters):0:(\\[|\\]|->)::2:^PHP Block Content$:#0000cc::2:0:
-php:String (single quoted):0:':':1:^PHP Block Content$:#009900::1:1:
+php:String (single quoted):0:':':1:^PHP Block Content$:##006699::1:1:
 php:String (single quote escaped):0:\\\\.::2:^String \\(single quoted\\)$:::1:1:
 php:Quoted Tags:1:<((/)?[a-z0-9]+):>:1:^String \\(single quoted\\)$:#0000ee::2:0:
 php:Quoted <html> Tags:1:1::3:^Quoted Tags$:#000066::2:0:
-php:Comment (C):0:/\\*:\\*/:1:^PHP Block Content$:#7777aa::1:2:
-php:Comment (C++/single line):0:(//|#).*?$::2:^PHP Block Content$:#7777aa::1:2:
+php:Quoted Attributes:1:([a-z]*=)[ \\n\\t]*("[^"]*")::2:^Quoted Tags$:#660099::1:0:
+php:Quoted Attribute Contents:1:2::3:^Quoted Attributes$:#cc0000::0:0:
+php:Comment (C):0:/\\*:\\*/:1:^PHP Block Content$:#aaaaaa::1:2:
+php:Comment (C++/single line):0:(//|#).*?$::2:^PHP Block Content$:#aaaaaa::1:2:
 php:Flow Control:0:\\b(if|else|elseif|case|default|switch|break|continue|while|do|for|foreach)\\b::2:^PHP Block Content$:#000000::2:1:
 php:String (SQL Keywords):0:\\b(SELECT|INSERT|UPDATE|DELETE|DROP|GROUP BY|FROM|INTO|ON|AS|AND|NOT|OR|NULL|SET|VALUES|WHERE|ORDER
 BY|LIMIT|(LEFT|RIGHT|FULL) JOIN|ASC|DESC)\\b::2:^(String \\(single quoted\\)|String \\(double quoted\\))$:#996699::2:1:
@@ -298,7 +300,7 @@ Tcl:Argument:1:\\-[a-z]+::2::#009966::2:1:
 Tcl:Data Types:1:\\b(array|blob|glob|list|set|string)\\b::2::#660099::2:1:
 Tcl:Numbers:1:[0-9\\.]+::2::#999900::2:1:
 xml:Format:1:<\\?:\\?>:1:^top$:#000000::2:1:
-xml:Tag:1:<((/)?[a-z0-9\:-]+):[^?-]?>:1::#000000::0:0:
+xml:Tag:1:<((/)?[a-z0-9\:-]+):[^?-]?>:1::#0000ee::0:0:
 xml:Tag Name:1:1::3:^Tag$:#005676::2:0:
 xml:Attribute:1:(?\:xmlns\\\:)?([a-z\\-]*=)("[^"]*")::2:^Tag$:#3cb300::1:0:
 xml:Attribute Content:1:2::3:^Attribute$:#ff7600::1:0:
