--- a/bluefish/data/highlighting.in
+++ b/bluefish/data/highlighting.in
@@ -38,7 +38,7 @@ gettext po:Message String:1:^msgstr ::2::#000099:#ffffff:2:0:
 gettext po:Domain:1:^domain::2::#000099:#ffffff:2:0:
 html:Tags:1:<((/)?[a-z0-9]+).*?>::2::#0000EE::0:0:
 html:<html> tag:1:1::3:^Tags$:#000066::2:0:
-html:Attributes:1:([a-z\\-]*=)[ \\n\\t]*("[^"]*")::2:^Tags$:#660099::0:0:
+html:Attributes:1:([a-z\\-]*=)[ \\n\\t]*((?\:"[^"]*")|(?\:'[^']*'))::2:^Tags$:#660099::0:0:
 html:Attribute Contents:1:2::3:^Attributes$:#cc0000::0:0:
 html:Comment:0:<!--:-->:1::#aaaaaa::1:2:
 html:DocType:1:<![a-z0-9]+:[^?-]>:1::#bb8800::0:0:
@@ -306,7 +306,7 @@ Tcl:Numbers:1:[0-9\\.]+::2::#999900::2:1:
 xml:Format:1:<\\?:\\?>:1:^top$:#000000::2:1:
 xml:Tag:1:<((/)?[a-z0-9\:-]+):[^?-]?>:1::#0000ee::0:0:
 xml:Tag Name:1:1::3:^Tag$:#005676::2:0:
-xml:Attribute:1:(?\:xmlns\\\:)?([a-z\\-]*=)("[^"]*")::2:^Tag$:#3cb300::1:0:
+xml:Attribute:1:(?\:xmlns\\\:)?([a-z\\-]*=)((?\:"[^"]*")|(?\:'[^']*'))::2:^Tag$:#3cb300::1:0:
 xml:Attribute Content:1:2::3:^Attribute$:#ff7600::1:0:
 xml:DocType:1:<!DOCTYPE [a-z0-9]+:>:1::#b35300::0:0:
 xml:Entity:1:[\\[]:[\\]]:1:^DocType$:#b35300::2:1:
