--- a/bluefish/data/highlighting.in
+++ b/bluefish/data/highlighting.in
@@ -38,7 +38,7 @@ gettext po:Message String:1:^msgstr ::2::#000099:#ffffff:2:0:
 gettext po:Domain:1:^domain::2::#000099:#ffffff:2:0:
 html:Tags:1:<((/)?[a-z0-9]+).*?>::2::#0000EE::0:0:
 html:<html> tag:1:1::3:^Tags$:#000066::2:0:
-html:Attributes:1:([a-z\\-]*=)[ \\n\\t]*((?\:"[^"]*")|(?\:'[^']*'))::2:^Tags$:#660099::0:0:
+html:Attributes:1:((?\:xml\:)?[a-z\\-]*=)[ \\n\\t]*((?\:"[^"]*")|(?\:'[^']*'))::2:^Tags$:#660099::0:0:
 html:Attribute Contents:1:2::3:^Attributes$:#cc0000::0:0:
 html:Comment:0:<!--:-->:1::#aaaaaa::1:2:
 html:DocType:1:<![a-z0-9]+:[^?-]>:1::#bb8800::0:0:
@@ -160,8 +160,8 @@ perl:Variables (Hash):1:\\%\\$?[a-z]([a-z0-9_]+)?::2::#0000cc::0:0:
 perl:File Functions:1:\\b(bind|binmode|close(?:dir)?|connect|eof|fcntl|fileno|flock|getc|getpeername|getsockname|getsockopt|ioctl|listen|open(?:dir)?|recv|read(?:dir)?|rewinddir|seek(?:dir)?|send|setsockopt|shutdown|socket|sysopen|sysread|sysseek|syswrite|tell(?:dir)?|write|accept|pipe|socketpair|print|printf|select)\\b::2::#900000::2:0:
 php:HTML:1:<(/?[a-z0-9]+):>:1::#0000ee::0:0:
 php:<html> Tags:1:1::3:^HTML$:#000066::2:0:
-php:HTML Attributes:1:[a-z\\-]*=[ \\n\\t]*((?\:"[^"]*")|(?\:'[^']*'))::2:^HTML$:#660099::0:0:
-php:HTML Attribute Contents:1:1::3:^HTML Attributes$:#cc0000::0:0:
+php:HTML Attributes:1:((?\:xml\:)?[a-z\\-]*=)[ \\n\\t]*((?\:"[^"]*")|(?\:'[^']*'))::2:^HTML$:#660099::0:0:
+php:HTML Attribute Contents:1:2::3:^HTML Attributes$:#cc0000::0:0:
 php:HTML DocType:1:<![a-z0-9]+:[^?-]>:1::#bb8800::1:1:
 php:HTML Entities:1:&[^; ]*;::2::#999999::2:0:
 php:Comment:0:<!--:-->:1::#aaaaaa::1:2:
@@ -184,7 +184,7 @@ php:Operators:1:[\\+\\-\\*\\/\\.<>=`!%]+(?!\\?php)::2:^PHP Block$:#cc0000::2:1:
 php:Numbers:1:(0x)?[0-9]+(?![0-9]*[a-z\\(_\\-])::2:^PHP Block$:#330099::2:1:
 php:Quoted Tags:1:<((/)?[a-z0-9]+):>:1:^String \\(single quoted\\)$:#009900::0:0:
 php:Quoted <html> Tags:1:1::3:^Quoted Tags$:#009900::0:0:
-php:Quoted Attributes:1:([a-z]*=)[ \\n\\t]*((?\:'[^']*')|(?\:"[^"]*"))::2:^Quoted Tags$:#009900::0:0:
+php:Quoted Attributes:1:((?\:xml\:)?[a-z\\-]*=)[ \\n\\t]*((?\:"[^"]*")|(?\:'[^']*'))::2:^Quoted Tags$:#009900::0:0:
 php:Quoted Attribute Contents:1:2::3:^Quoted Attributes$:#009900::0:0:
 php:Quoted HTML Entities:1:&[^;]*;::2:^String \\(single quoted\\)$:#009900::2:0:
 php:Quoted HTML Comment:0:<!--:-->:1:^String \\(single quoted\\)$:#009900::1:2:
