From: hma@syd.odn.ne.jp
to specify charset in the <META> tag in HTML file,
    EUC-JP    is used instead of EUCJP,
    Shift_JIS is used instead of SJIS
in Japanese language. (cf. RFC1468)

In data/encodings.in file, I think they must be fixed unless
I misunderstand the role of that file.


git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@1984 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/data/encodings.in
+++ b/bluefish/data/encodings.in
@@ -15,8 +15,8 @@ ISO-8859-14 (Latin 8):ISO-8859-14:
 ISO-8859-15 (Latin 9, West European with EURO):ISO-8859-15:
 GB2312 (Chinese):GB2312:
 BIG5 (Chinese):BIG5:
-SJIS (Japanese):SJIS:
+Shift_JIS (Japanese):Shift_JIS:
 KSC (Korean):KSC:
 KOI8-R (Russian):KOI8-R:
 CP1251 (Russian):CP1251:
-EUCJP (Japanese):EUCJP:
+EUC-JP (Japanese):EUC-JP:
