--- a/data/encodings.in
+++ b/data/encodings.in
@@ -15,8 +15,8 @@ ISO-8859-14 (Latin 8):ISO-8859-14:
 ISO-8859-15 (Latin 9, West European with EURO):ISO-8859-15:
 GB2312 (Chinese):GB2312:
 BIG5 (Chinese):BIG5:
-SJIS (Japanese):SJIS:
+Shift_JIS (Japanese):Shift_JIS:
 KSC (Korean):KSC:
 KOI8-R (Russian):KOI8-R:
 CP1251 (Russian):CP1251:
-EUCJP (Japanese):EUCJP:
+EUC-JP (Japanese):EUC-JP:
