--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -49,6 +49,7 @@ SRCS = 	about.c \
 			bookmark.c \
 			cap.c \
 			char_table.c \
+			dialog_utils.c \
 			document.c \
 			file.c \
 			file_dialogs.c \
