Some bugs fixed. New search window. fref2.c set as default.
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@2014 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/src/Makefile.in
+++ b/bluefish/src/Makefile.in
@@ -54,7 +54,7 @@ SRCS = 	about.c \
 			file.c \
 			file_dialogs.c \
 			filebrowser2.c \
-			fref.c \
+			fref2.c \
 			gtk_easy.c \
 			gui.c \
 			highlight.c \
