--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -54,7 +54,7 @@ SRCS = 	about.c \
 			file.c \
 			file_dialogs.c \
 			filebrowser2.c \
-			fref.c \
+			fref2.c \
 			gtk_easy.c \
 			gui.c \
 			highlight.c \
