--- a/configure.ac
+++ b/configure.ac
@@ -321,6 +321,49 @@ AC_CHECK_HEADER(aspell.h,
 	)
 )
 
+AC_ARG_ENABLE(python,
+	AC_HELP_STRING([--disable-python],[don't build the python plugin]),
+	python=$enableval,
+	python=yes
+)
+if test "$python" = yes; then
+	AC_PATH_PROG(pythonpath, python)
+	if test "_$pythonpath" = _ ; then
+		AC_PATH_PROG(pythonpath, python2)
+	fi
+	if test "_$pythonpath" = _ ; then
+		python=no
+	else
+		AC_MSG_CHECKING(Python version)
+		changequote(<<, >>)dnl
+		PY_VER=`$pythonpath -c 'import distutils.sysconfig; print distutils.sysconfig.get_config_vars("VERSION")[0];'`
+		PY_LIB=`$pythonpath -c 'import distutils.sysconfig; print distutils.sysconfig.get_python_lib(standard_lib=1);'`
+		PY_INC=`$pythonpath -c 'import distutils.sysconfig; print distutils.sysconfig.get_config_vars("INCLUDEPY")[0];'`
+		$pythonpath -c "import sys; map(int,sys.version[:3].split('.'))>= [2,2] or sys.exit(1)"
+		changequote([, ])dnl
+		AC_MSG_RESULT($PY_VER)
+		if test "$?" != "1"; then
+			AC_MSG_CHECKING(Python compile flags)
+			PY_PREFIX=`$pythonpath -c 'import sys; print sys.prefix'`
+			PY_EXEC_PREFIX=`$pythonpath -c 'import sys; print sys.exec_prefix'`
+			if test -f $PY_INC/Python.h; then
+				LIBS="$LIBS -L$PY_LIB/config -lpython$PY_VER -lpthread -lutil"
+				CFLAGS="$CFLAGS -I$PY_INC"
+				AC_MSG_RESULT(ok)
+			else
+				python=no
+				AC_MSG_RESULT([Can't find Python.h])
+			fi
+		else
+			echo "Python too old. Only 2.2 or above is supported."
+			python=no
+		fi
+	fi
+fi
+if test "$python" = yes; then
+	AC_DEFINE(HAVE_PYTHON)
+fi
+
 localedir='${prefix}/share/locale'
 AC_SUBST(localedir)
 
