--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -51,6 +51,7 @@ SRCS = 	about.c \
 			char_table.c \
 			dialog_utils.c \
 			document.c \
+			embed_python.c \
 			file.c \
 			file_dialogs.c \
 			filebrowser2.c \
