adding python detection to ./configure modelled after the xchat python detection
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@2021 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/src/Makefile.in
+++ b/bluefish/src/Makefile.in
@@ -51,6 +51,7 @@ SRCS = 	about.c \
 			char_table.c \
 			dialog_utils.c \
 			document.c \
+			embed_python.c \
 			file.c \
 			file_dialogs.c \
 			filebrowser2.c \
