Images in fref tree - makefile.
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@2042 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/inline_images/Makefile
+++ b/bluefish/inline_images/Makefile
@@ -71,6 +71,9 @@ TOOLBAR = \
 	pixmap_frhide frhide.png \
 	pixmap_frinfo frinfo.png \
 	pixmap_frsearch frsearch.png \
+	pixmap_frlibrary frlibrary.png \
+	pixmap_frgroup frgroup.png \
+	pixmap_frnote frnote.png \
 	pixmap_headings headings.png \
 	pixmap_hrule hrule.png \
 	pixmap_image image.png \
