--- a/data/bluefish.desktop.in
+++ b/data/bluefish.desktop.in
@@ -1,6 +1,8 @@
 [Desktop Entry]
 Name=Bluefish Editor
+Name[de]=Bluefish Editor
 Comment=Web Development Editor
+Comment[de]=Editor für Web-Entwickler
 Exec=bluefish -n
 Icon=ICONDIR/bluefish-icon.png
 Terminal=false
