Working on the parallel installation of the stable and the development bluefish version. Adding some hints, which bflib_* files to download and how to adjust data/Makefile.in for the new fref2.
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk/bluefish@2111 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/Makefile.in
+++ b/Makefile.in
@@ -74,7 +74,7 @@ distclean:
 
 install-icon:
 	$(INSTALL_DIR) $(DESTDIR)$(iconpath)
-	$(INSTALL_DATA) inline_images/bluefish_icon1.png $(DESTDIR)$(iconpath)/bluefish-icon.png
+	$(INSTALL_DATA) inline_images/bluefish_icon1.png $(DESTDIR)$(iconpath)/$(PACKAGE)-icon.png
 
 install-nls:
 	cd po/ && $(MAKE) install
