--- a/bluefish/data/bluefish.desktop.in
+++ b/bluefish/data/bluefish.desktop.in
@@ -3,8 +3,8 @@ Name=Bluefish Editor
 Name[de]=Bluefish Editor
 Comment=Web Development Editor
 Comment[de]=Editor für Web-Entwickler
-Exec=bluefish -n
-Icon=ICONDIR/bluefish-icon.png
+Exec=PACKAGE -n
+Icon=ICONDIR/PACKAGE-icon.png
 Terminal=false
 Type=Application
 Categories=Application;Development;
