Fix issue with freedesktop.org menu support. Bf-projects need to be opened with the -p option. Opening multiple files should not open multiple instances of bluefish (IMHO this is more, what users wish), but projects should be opened with the -n option set.
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@2121 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/configure.ac
+++ b/bluefish/configure.ac
@@ -716,6 +716,7 @@ AC_CONFIG_FILES(
 	data/filetypes
 	data/bluefish.applications
 	data/bluefish.desktop
+	data/bluefish-project.desktop
 	data/bluefish.keys)
 AC_OUTPUT
 
