Forgot to fix uninstall target.
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@2145 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/data/Makefile.in
+++ b/bluefish/data/Makefile.in
@@ -101,7 +101,7 @@ uninstall:
 		rm -f $(DESTDIR)$(pkgdatadir)$$file.default ;\
 	done
 	@for file in $(FUNCREFFILES) ; do \
-		rm -f $(DESTDIR)$(pkgdatadir)$$file ;\
+		rm -f $(DESTDIR)$(pkgdatadir)$$file.gz ;\
 	done
 
 clean:
