Checking read only libraries in fref2
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@2148 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/inline_images/Makefile
+++ b/bluefish/inline_images/Makefile
@@ -72,6 +72,7 @@ TOOLBAR = \
 	pixmap_frinfo frinfo.png \
 	pixmap_frsearch frsearch.png \
 	pixmap_frlibrary frlibrary.png \
+	pixmap_frlibrary_ro frlibrary_ro.png \
 	pixmap_frgroup frgroup.png \
 	pixmap_frnote frnote.png \
 	pixmap_frfunction frfunction.png \
